# software_challenge

./: README.md
software_training_assignment/: CMakeLists.txt  package.xml
software_training_assignment/action/: Software.action
software_training_assignment/include/software_training_assignment/: circular_move_publisher.hpp  clear_turtles_client.hpp  custom_publisher.hpp  moving_turtle_action_server.hpp  reset_moving_turtle_service.hpp  spawn_turtle.hpp  visibility.h
software_training_assignment/install/: local_setup.sh  setup.sh
software_training_assignment/install/software_training_assignment/lib/: client
software_training_assignment/install/software_training_assignment/share/software_training_assignment/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
software_training_assignment/install/software_training_assignment/share/software_training_assignment/cmake/: software_training_assignmentConfig.cmake
software_training_assignment/launch/: software_training_assignment.launch.py
software_training_assignment/log/: latest_build
software_training_assignment/src/: circular_move_publisher.cpp  clear_turtles_client.cpp  custom_publisher.cpp  moving_turtle_action_server.cpp  reset_moving_turtle_service.cpp  spawn_turtle.cpp
